--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,15 +43,9 @@ docs = [
     "sphinx",
     "sphinx-bootstrap-theme",
     "myst_parser",
-    "sphinx_rtd_theme"
+    "sphinx_rtd_theme",
+    "sphinxcontrib_spelling",
 ]
-lint = [
-  "black[jupyter]>=22.6.0",
-  "mdformat>0.7",
-  "mdformat-gfm>=0.3.5",
-  "ruff>=0.0.156"
-]
-typing = ["mypy>=0.990"]
 
 [tool.jupyter-releaser.hooks]
 before-build-python = ["sudo apt-get update", "sudo apt-get install -qq octave octave-signal liboctave-dev"]
@@ -80,12 +74,19 @@ ARGS = "--doctest-modules -l --cov-report html --cov-report=xml --cov=oct2py -vv
 test = "python -m pytest $ARGS --cov-fail-under 90 {args}"
 
 [tool.hatch.envs.typing]
-features = ["typing", "test"]
+features = ["test"]
+dependencies = ["mypy>=0.990"]
 [tool.hatch.envs.typing.scripts]
 test = "mypy --install-types --non-interactive {args:oct2py}"
 
 [tool.hatch.envs.lint]
-features = ["lint"]
+dependencies = [
+  "black[jupyter]==22.1-.0",
+  "mdformat>0.7",
+  "mdformat-gfm>=0.3.5",
+  "ruff==0.0.189"
+]
+detached = true
 [tool.hatch.envs.lint.scripts]
 style = [
   "ruff {args:.}",
@@ -164,3 +165,13 @@ ignore = [
 # N806 Variable `V` in function should be lowercase
 "oct2py/tests/*" = ["S101", "N806"]
 "oct2py/ipython/tests/*" = ["S101", "N806"]
+
+[tool.interrogate]
+ignore-init-module=true
+ignore-private=true
+ignore-semiprivate=true
+ignore-property-decorators=true
+ignore-nested-functions=true
+ignore-nested-classes=true
+fail-under=100
+exclude = ["*/tests", "docs"]
