--- a/pyproject.toml
+++ b/pyproject.toml
@@ -165,8 +165,10 @@ ignore = [
 # S101 Use of `assert` detected
 # N806 Variable `V` in function should be lowercase
 # PLR2004 Magic value used in comparison
+# SIM114 Combine `if` branches
+# PLR0912 Too many branches
 "oct2py/tests/*" = ["S101", "N806", "PLR2004"]
-"oct2py/ipython/tests/*" = ["S101", "N806"]
+"oct2py/ipython/tests/*" = ["S101", "N806", "SIM114", "PLR0912"]
 
 [tool.interrogate]
 ignore-init-module=true
