--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,7 @@ ignore = [
 # PLR2004 Magic value used in comparison
 # SIM114 Combine `if` branches
 # PLR0912 Too many branches
-"oct2py/tests/*" = ["S101", "N806", "PLR2004"]
+"oct2py/tests/*" = ["S101", "N806", "PLR2004", "SIM114", "PLR0912"]
 "oct2py/ipython/tests/*" = ["S101", "N806", "SIM114", "PLR0912"]
 
 [tool.interrogate]
