update rtd config

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,9 +1,12 @@
 version: 2
 python:
-  version: 3.8
   install:
     # install itself with pip install .
     - method: pip
       path: .
       extra_requirements:
         - docs
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
