--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,9 +41,8 @@ test = [
 ]
 docs = [
     "sphinx",
-    "sphinx-bootstrap-theme",
+    "pydata_sphinx_theme",
     "myst_parser",
-    "sphinx_rtd_theme",
     "sphinxcontrib_spelling",
 ]
 
@@ -84,7 +83,7 @@ dependencies = [
   "black[jupyter]==23.3.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
-  "ruff==0.0.276"
+  "ruff==0.0.282"
 ]
 detached = true
 [tool.hatch.envs.lint.scripts]
