--- a/pyproject.toml
+++ b/pyproject.toml
@@ -188,3 +188,6 @@ exclude = ["tests", "docs"]
 
 [tool.repo-review]
 ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
+
+[tool.codespell]
+ignore-words-list = "ans"
