--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ test = "python -m pytest $ARGS --cov-fail-under 85 {args}"
 
 [tool.hatch.envs.typing]
 features = ["test"]
-dependencies = ["mypy>=0.990"]
+dependencies = ["mypy>=1.5.1"]
 [tool.hatch.envs.typing.scripts]
 test = "mypy --install-types --non-interactive {args:oct2py}"
 
@@ -99,8 +99,14 @@ fmt = [
 ]
 
 [tool.pytest.ini_options]
-testpaths = "oct2py"
-addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
+minversion = "6.0"
+xfail_strict = true
+log_cli_level = "info"
+addopts = [
+  "-raXs", "--durations=10", "--color=yes", "--doctest-modules",
+   "--showlocals", "--strict-markers", "--strict-config"
+]
+testpaths = ["tests", "tests/ipython"]
 doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
 timeout = 300
 # Restore this setting to debug failures
@@ -109,15 +115,23 @@ filterwarnings= [
   # Fail on warnings
   "error",
   # Ignore our own user warnings
-  "ignore:Using deprecated:UserWarning:oct2py",
-  "ignore:Key - value pairs:UserWarning:oct2py",
+  "ignore:Using deprecated:UserWarning:tests",
+  "ignore:Key - value pairs:UserWarning:tests",
   "module:Jupyter is migrating its paths:DeprecationWarning",
+]
+
+[tool.coverage.run]
+relative_files = true
+source = ["oct2py"]
+omit = [
+  "tests/*",
 ]
 
 [tool.mypy]
 check_untyped_defs = true
 disallow_incomplete_defs = true
 disallow_untyped_decorators = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 no_implicit_optional = true
 no_implicit_reexport = false
 pretty = true
@@ -128,6 +142,7 @@ strict_optional = true
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_return_any = true
+warn_unreachable = true
 warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
@@ -166,8 +181,7 @@ ignore = [
 # PLR2004 Magic value used in comparison
 # SIM114 Combine `if` branches
 # PLR0912 Too many branches
-"oct2py/tests/*" = ["S101", "N806", "PLR2004", "SIM114", "PLR0912"]
-"oct2py/ipython/tests/*" = ["S101", "N806", "SIM114", "PLR0912"]
+"tests/*" = ["S101", "N806", "PLR2004", "SIM114", "PLR0912"]
 
 [tool.interrogate]
 ignore-init-module=true
@@ -177,4 +191,10 @@ ignore-property-decorators=true
 ignore-nested-functions=true
 ignore-nested-classes=true
 fail-under=100
-exclude = ["*/tests", "docs"]
+exclude = ["tests", "docs"]
+
+[tool.repo-review]
+ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
+
+[tool.codespell]
+ignore-words-list = "ans,te"
