--- a/pyproject.toml
+++ b/pyproject.toml
@@ -197,4 +197,4 @@ exclude = ["tests", "docs"]
 ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
 
 [tool.codespell]
-ignore-words-list = "ans,te"
+ignore-words-list = "ans,te,manuel"
