--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,21 +80,20 @@ test = "mypy --install-types --non-interactive {args:oct2py}"
 
 [tool.hatch.envs.lint]
 dependencies = [
-  "black[jupyter]==23.3.0",
   "mdformat>0.7",
   "mdformat-gfm>=0.3.5",
-  "ruff==0.0.282"
+  "ruff==0.1.3"
 ]
 detached = true
 [tool.hatch.envs.lint.scripts]
 style = [
   "ruff {args:.}",
-  "black --check --diff --color {args:.}",
+  "ruff format {args:.}",
   "mdformat --check {args:docs *.md}"
 ]
 fmt = [
-  "black {args:.}",
   "ruff --fix {args:.}",
+  "ruff format {args:.}",
   "mdformat {args:docs *.md}"
 ]
 
@@ -145,22 +144,13 @@ warn_return_any = true
 warn_unreachable = true
 warn_unused_ignores = true
 
-[[tool.mypy.overrides]]
-module = [
-]
-ignore_missing_imports = true
-
-[tool.black]
-line-length = 100
-target-version = ["py37"]
-skip-string-normalization = true
-
-
 [tool.ruff]
-target-version = "py37"
+target-version = "py38"
 line-length = 100
+
+[tool.ruff.lint]
 select = [
-  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N",
+  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
   "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
   "W", "YTT",
 ]
@@ -175,7 +165,7 @@ ignore = [
 "C408", "C409"
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # S101 Use of `assert` detected
 # N806 Variable `V` in function should be lowercase
 # PLR2004 Magic value used in comparison
@@ -195,6 +185,3 @@ exclude = ["tests", "docs"]
 
 [tool.repo-review]
 ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
-
-[tool.codespell]
-ignore-words-list = "ans,te,manuel"
