--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,7 @@
 ci:
   autoupdate_schedule: monthly
   autoupdate_commit_msg: "chore: update pre-commit hooks"
+  skip: [mypy]
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -48,6 +49,16 @@ repos:
     hooks:
       - id: codespell
         args: ["-L", "ans,te,manuel"]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v1.6.1"
+    hooks:
+      - id: mypy
+        files: "^oct2py"
+        stages: [manual]
+        args: ["--install-types", "--non-interactive"]
+        additional_dependencies:
+          ["ipython", "metakernel", "octave_kernel", "scipy"]
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: "v1.10.0"
