--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,37 +72,24 @@ ARGS = "--doctest-modules -l --cov-report html --cov-report=xml --cov=oct2py -vv
 [tool.hatch.envs.cover.scripts]
 test = "python -m pytest $ARGS --cov-fail-under 85 {args}"
 
-[tool.hatch.envs.typing]
-features = ["test"]
-dependencies = ["mypy==1.6.0"]
-[tool.hatch.envs.typing.scripts]
-test = "mypy --install-types --non-interactive {args:oct2py}"
-
 [tool.hatch.envs.lint]
-dependencies = [
-  "mdformat>0.7",
-  "mdformat-gfm>=0.3.5",
-  "ruff==0.1.3"
-]
 detached = true
+dependencies = ["pre-commit"]
 [tool.hatch.envs.lint.scripts]
-style = [
-  "ruff {args:.}",
-  "ruff format {args:.}",
-  "mdformat --check {args:docs *.md}"
-]
-fmt = [
-  "ruff --fix {args:.}",
-  "ruff format {args:.}",
-  "mdformat {args:docs *.md}"
-]
+build = "pre-commit run --all-files ruff"
+
+[tool.hatch.envs.typing]
+dependencies = [ "pre-commit"]
+detached = true
+[tool.hatch.envs.typing.scripts]
+test = "pre-commit run --all-files --hook-stage manual mypy"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 xfail_strict = true
 log_cli_level = "info"
 addopts = [
-  "-raXs", "--durations=10", "--color=yes", "--doctest-modules",
+  "-ra", "--durations=10", "--color=yes", "--doctest-modules",
    "--showlocals", "--strict-markers", "--strict-config"
 ]
 testpaths = ["tests", "tests/ipython"]
@@ -117,6 +104,7 @@ filterwarnings= [
   "ignore:Using deprecated:UserWarning:tests",
   "ignore:Key - value pairs:UserWarning:tests",
   "module:Jupyter is migrating its paths:DeprecationWarning",
+  "module:datetime.datetime.utcf:DeprecationWarning",
 ]
 
 [tool.coverage.run]
@@ -127,22 +115,13 @@ omit = [
 ]
 
 [tool.mypy]
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_untyped_decorators = true
+strict = true
+disable_error_code = ["no-untyped-call", "no-untyped-def"]
 enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
-no_implicit_optional = true
-no_implicit_reexport = false
 pretty = true
 show_error_context = true
 show_error_codes = true
-strict_equality = true
-strict_optional = true
-warn_unused_configs = true
-warn_redundant_casts = true
-warn_return_any = true
 warn_unreachable = true
-warn_unused_ignores = true
 
 [tool.ruff]
 target-version = "py38"
@@ -184,4 +163,4 @@ fail-under=100
 exclude = ["tests", "docs"]
 
 [tool.repo-review]
-ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
+ignore = ["PY007", "GH102", "MY101"]
