try with QT_OFFSCREEN

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get install -qq octave octave-signal liboctave-dev
       - name: Generate coverage report
         run: |
-          export QT_DEBUG_PLUGINS=1
+          export QT_OFFSCREEN=1
           pip install hatch; xvfb-run --auto-servernum hatch run cover:test
 
   check_release:
