--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ filterwarnings= [
   "module:Jupyter is migrating its paths:DeprecationWarning",
   "module:datetime.datetime.utcf:DeprecationWarning",
   "ignore:(?s).*Pyarrow will become a required dependency of pandas:DeprecationWarning",  # pandas pyarrow (pandas<3.0),
+  "module:Parsing dates involving a day of month without a year specified:DeprecationWarning", # ipykernel
 ]
 
 [tool.coverage.run]
