--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - name: Install Octave
         run: |
+          sudo apt-add-repository ppa:octave/stable
           sudo apt-get update
           sudo apt-get install -qq octave octave-signal octave-dev
       - name: Generate coverage report
